--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,20 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- For ExternalShopHandler, dependency from: https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
